lose/LoseParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .LoseListener import LoseListener
else:
    from LoseListener import LoseListener


class LoseParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'func'", u"'proc'", u"'{'", u"'}'", 
                     u"'nat'", u"'='", u"';'", u"'signed'", u"'list'", u"'list2'", 
                     u"'('", u"','", u"')'", u"'while'", u"'for'", u"'if'", 
                     u"'print'", u"'ifelse'", u"'return'", u"'halt'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"OPERATOR_MUL_DIV", u"OPERATOR_ADD_SUB", 
                      u"OPERATOR_COMPARE", u"OPERATOR_BOOLEAN", u"OPERATOR_NOT", 
                      u"COMMENT", u"WS", u"VAR", u"INT" ]

    RULE_prog = 0
    RULE_trueprog = 1
    RULE_command = 2
    RULE_nondefprog = 3
    RULE_nondefcommand = 4
    RULE_funcdef = 5
    RULE_procdef = 6
    RULE_funcprocbody = 7
    RULE_declare = 8
    RULE_natdecl = 9
    RULE_signdecl = 10
    RULE_listdecl = 11
    RULE_list2decl = 12
    RULE_funcproccall = 13
    RULE_funcproccallbody = 14
    RULE_whileloop = 15
    RULE_forloop = 16
    RULE_ifstate = 17
    RULE_printstate = 18
    RULE_ifelsestate = 19
    RULE_ifelsenondefprog = 20
    RULE_elsenondefprog = 21
    RULE_ifnondefprog = 22
    RULE_whilenondefprog = 23
    RULE_ifelseexpr = 24
    RULE_ifexpr = 25
    RULE_whileexpr = 26
    RULE_assign = 27
    RULE_returnstate = 28
    RULE_expr = 29

    ruleNames =  [ u"prog", u"trueprog", u"command", u"nondefprog", u"nondefcommand", 
                   u"funcdef", u"procdef", u"funcprocbody", u"declare", 
                   u"natdecl", u"signdecl", u"listdecl", u"list2decl", u"funcproccall", 
                   u"funcproccallbody", u"whileloop", u"forloop", u"ifstate", 
                   u"printstate", u"ifelsestate", u"ifelsenondefprog", u"elsenondefprog", 
                   u"ifnondefprog", u"whilenondefprog", u"ifelseexpr", u"ifexpr", 
                   u"whileexpr", u"assign", u"returnstate", u"expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    OPERATOR_MUL_DIV=21
    OPERATOR_ADD_SUB=22
    OPERATOR_COMPARE=23
    OPERATOR_BOOLEAN=24
    OPERATOR_NOT=25
    COMMENT=26
    WS=27
    VAR=28
    INT=29

    def __init__(self, input):
        super(LoseParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.ProgContext, self).__init__(parent, invokingState)
            self.parser = parser

        def trueprog(self):
            return self.getTypedRuleContext(LoseParser.TrueprogContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_prog

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterProg(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitProg(self)




    def prog(self):

        localctx = LoseParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.trueprog()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TrueprogContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.TrueprogContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LoseParser.EOF, 0)

        def command(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LoseParser.CommandContext)
            else:
                return self.getTypedRuleContext(LoseParser.CommandContext,i)


        def getRuleIndex(self):
            return LoseParser.RULE_trueprog

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterTrueprog(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitTrueprog(self)




    def trueprog(self):

        localctx = LoseParser.TrueprogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_trueprog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LoseParser.T__0) | (1 << LoseParser.T__1) | (1 << LoseParser.T__4) | (1 << LoseParser.T__7) | (1 << LoseParser.T__8) | (1 << LoseParser.T__9) | (1 << LoseParser.T__13) | (1 << LoseParser.T__14) | (1 << LoseParser.T__15) | (1 << LoseParser.T__16) | (1 << LoseParser.T__17) | (1 << LoseParser.T__18) | (1 << LoseParser.T__19) | (1 << LoseParser.VAR))) != 0):
                self.state = 62
                self.command()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(LoseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.CommandContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcdef(self):
            return self.getTypedRuleContext(LoseParser.FuncdefContext,0)


        def procdef(self):
            return self.getTypedRuleContext(LoseParser.ProcdefContext,0)


        def declare(self):
            return self.getTypedRuleContext(LoseParser.DeclareContext,0)


        def nondefcommand(self):
            return self.getTypedRuleContext(LoseParser.NondefcommandContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_command

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterCommand(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitCommand(self)




    def command(self):

        localctx = LoseParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            token = self._input.LA(1)
            if token in [LoseParser.T__0]:
                self.state = 70
                self.funcdef()

            elif token in [LoseParser.T__1]:
                self.state = 71
                self.procdef()

            elif token in [LoseParser.T__4, LoseParser.T__7, LoseParser.T__8, LoseParser.T__9]:
                self.state = 72
                self.declare()

            elif token in [LoseParser.T__13, LoseParser.T__14, LoseParser.T__15, LoseParser.T__16, LoseParser.T__17, LoseParser.T__18, LoseParser.T__19, LoseParser.VAR]:
                self.state = 73
                self.nondefcommand()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NondefprogContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.NondefprogContext, self).__init__(parent, invokingState)
            self.parser = parser

        def nondefcommand(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LoseParser.NondefcommandContext)
            else:
                return self.getTypedRuleContext(LoseParser.NondefcommandContext,i)


        def getRuleIndex(self):
            return LoseParser.RULE_nondefprog

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterNondefprog(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitNondefprog(self)




    def nondefprog(self):

        localctx = LoseParser.NondefprogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nondefprog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LoseParser.T__13) | (1 << LoseParser.T__14) | (1 << LoseParser.T__15) | (1 << LoseParser.T__16) | (1 << LoseParser.T__17) | (1 << LoseParser.T__18) | (1 << LoseParser.T__19) | (1 << LoseParser.VAR))) != 0):
                self.state = 76
                self.nondefcommand()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NondefcommandContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.NondefcommandContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcproccall(self):
            return self.getTypedRuleContext(LoseParser.FuncproccallContext,0)


        def whileloop(self):
            return self.getTypedRuleContext(LoseParser.WhileloopContext,0)


        def forloop(self):
            return self.getTypedRuleContext(LoseParser.ForloopContext,0)


        def ifstate(self):
            return self.getTypedRuleContext(LoseParser.IfstateContext,0)


        def ifelsestate(self):
            return self.getTypedRuleContext(LoseParser.IfelsestateContext,0)


        def assign(self):
            return self.getTypedRuleContext(LoseParser.AssignContext,0)


        def returnstate(self):
            return self.getTypedRuleContext(LoseParser.ReturnstateContext,0)


        def printstate(self):
            return self.getTypedRuleContext(LoseParser.PrintstateContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_nondefcommand

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterNondefcommand(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitNondefcommand(self)




    def nondefcommand(self):

        localctx = LoseParser.NondefcommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nondefcommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 82
                self.funcproccall()
                pass

            elif la_ == 2:
                self.state = 83
                self.whileloop()
                pass

            elif la_ == 3:
                self.state = 84
                self.forloop()
                pass

            elif la_ == 4:
                self.state = 85
                self.ifstate()
                pass

            elif la_ == 5:
                self.state = 86
                self.ifelsestate()
                pass

            elif la_ == 6:
                self.state = 87
                self.assign()
                pass

            elif la_ == 7:
                self.state = 88
                self.returnstate()
                pass

            elif la_ == 8:
                self.state = 89
                self.printstate()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.FuncdefContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcprocbody(self):
            return self.getTypedRuleContext(LoseParser.FuncprocbodyContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_funcdef

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterFuncdef(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitFuncdef(self)




    def funcdef(self):

        localctx = LoseParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(LoseParser.T__0)
            self.state = 93
            self.funcprocbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcdefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.ProcdefContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcprocbody(self):
            return self.getTypedRuleContext(LoseParser.FuncprocbodyContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_procdef

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterProcdef(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitProcdef(self)




    def procdef(self):

        localctx = LoseParser.ProcdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_procdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(LoseParser.T__1)
            self.state = 96
            self.funcprocbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncprocbodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.FuncprocbodyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcproccallbody(self):
            return self.getTypedRuleContext(LoseParser.FuncproccallbodyContext,0)


        def nondefprog(self):
            return self.getTypedRuleContext(LoseParser.NondefprogContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_funcprocbody

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterFuncprocbody(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitFuncprocbody(self)




    def funcprocbody(self):

        localctx = LoseParser.FuncprocbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcprocbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.funcproccallbody()
            self.state = 99
            self.match(LoseParser.T__2)
            self.state = 100
            self.nondefprog()
            self.state = 101
            self.match(LoseParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclareContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.DeclareContext, self).__init__(parent, invokingState)
            self.parser = parser

        def natdecl(self):
            return self.getTypedRuleContext(LoseParser.NatdeclContext,0)


        def signdecl(self):
            return self.getTypedRuleContext(LoseParser.SigndeclContext,0)


        def listdecl(self):
            return self.getTypedRuleContext(LoseParser.ListdeclContext,0)


        def list2decl(self):
            return self.getTypedRuleContext(LoseParser.List2declContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_declare

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterDeclare(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitDeclare(self)




    def declare(self):

        localctx = LoseParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            token = self._input.LA(1)
            if token in [LoseParser.T__4]:
                self.state = 103
                self.natdecl()

            elif token in [LoseParser.T__7]:
                self.state = 104
                self.signdecl()

            elif token in [LoseParser.T__8]:
                self.state = 105
                self.listdecl()

            elif token in [LoseParser.T__9]:
                self.state = 106
                self.list2decl()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NatdeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.NatdeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LoseParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(LoseParser.ExprContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_natdecl

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterNatdecl(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitNatdecl(self)




    def natdecl(self):

        localctx = LoseParser.NatdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_natdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(LoseParser.T__4)
            self.state = 110
            self.match(LoseParser.VAR)
            self.state = 113
            _la = self._input.LA(1)
            if _la==LoseParser.T__5:
                self.state = 111
                self.match(LoseParser.T__5)
                self.state = 112
                self.expr(0)


            self.state = 115
            self.match(LoseParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SigndeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.SigndeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LoseParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(LoseParser.ExprContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_signdecl

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterSigndecl(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitSigndecl(self)




    def signdecl(self):

        localctx = LoseParser.SigndeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_signdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(LoseParser.T__7)
            self.state = 118
            self.match(LoseParser.VAR)
            self.state = 121
            _la = self._input.LA(1)
            if _la==LoseParser.T__5:
                self.state = 119
                self.match(LoseParser.T__5)
                self.state = 120
                self.expr(0)


            self.state = 123
            self.match(LoseParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListdeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.ListdeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LoseParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(LoseParser.ExprContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_listdecl

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterListdecl(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitListdecl(self)




    def listdecl(self):

        localctx = LoseParser.ListdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_listdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(LoseParser.T__8)
            self.state = 126
            self.match(LoseParser.VAR)
            self.state = 129
            _la = self._input.LA(1)
            if _la==LoseParser.T__5:
                self.state = 127
                self.match(LoseParser.T__5)
                self.state = 128
                self.expr(0)


            self.state = 131
            self.match(LoseParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List2declContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.List2declContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LoseParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(LoseParser.ExprContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_list2decl

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterList2decl(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitList2decl(self)




    def list2decl(self):

        localctx = LoseParser.List2declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_list2decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(LoseParser.T__9)
            self.state = 134
            self.match(LoseParser.VAR)
            self.state = 137
            _la = self._input.LA(1)
            if _la==LoseParser.T__5:
                self.state = 135
                self.match(LoseParser.T__5)
                self.state = 136
                self.expr(0)


            self.state = 139
            self.match(LoseParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncproccallContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.FuncproccallContext, self).__init__(parent, invokingState)
            self.parser = parser

        def funcproccallbody(self):
            return self.getTypedRuleContext(LoseParser.FuncproccallbodyContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_funcproccall

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterFuncproccall(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitFuncproccall(self)




    def funcproccall(self):

        localctx = LoseParser.FuncproccallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_funcproccall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.funcproccallbody()
            self.state = 142
            self.match(LoseParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncproccallbodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.FuncproccallbodyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i=None):
            if i is None:
                return self.getTokens(LoseParser.VAR)
            else:
                return self.getToken(LoseParser.VAR, i)

        def getRuleIndex(self):
            return LoseParser.RULE_funcproccallbody

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterFuncproccallbody(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitFuncproccallbody(self)




    def funcproccallbody(self):

        localctx = LoseParser.FuncproccallbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_funcproccallbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(LoseParser.VAR)
            self.state = 145
            self.match(LoseParser.T__10)
            self.state = 150
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 146
                    self.match(LoseParser.VAR)
                    self.state = 147
                    self.match(LoseParser.T__11) 
                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 153
            self.match(LoseParser.VAR)
            self.state = 154
            self.match(LoseParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileloopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.WhileloopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def whileexpr(self):
            return self.getTypedRuleContext(LoseParser.WhileexprContext,0)


        def whilenondefprog(self):
            return self.getTypedRuleContext(LoseParser.WhilenondefprogContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_whileloop

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterWhileloop(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitWhileloop(self)




    def whileloop(self):

        localctx = LoseParser.WhileloopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_whileloop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(LoseParser.T__13)
            self.state = 157
            self.match(LoseParser.T__10)
            self.state = 158
            self.whileexpr()
            self.state = 159
            self.match(LoseParser.T__12)
            self.state = 160
            self.match(LoseParser.T__2)
            self.state = 161
            self.whilenondefprog()
            self.state = 162
            self.match(LoseParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForloopContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.ForloopContext, self).__init__(parent, invokingState)
            self.parser = parser

        def nondefcommand(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LoseParser.NondefcommandContext)
            else:
                return self.getTypedRuleContext(LoseParser.NondefcommandContext,i)


        def expr(self):
            return self.getTypedRuleContext(LoseParser.ExprContext,0)


        def nondefprog(self):
            return self.getTypedRuleContext(LoseParser.NondefprogContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_forloop

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterForloop(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitForloop(self)




    def forloop(self):

        localctx = LoseParser.ForloopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_forloop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(LoseParser.T__14)
            self.state = 165
            self.match(LoseParser.T__10)
            self.state = 166
            self.nondefcommand()
            self.state = 167
            self.match(LoseParser.T__6)
            self.state = 168
            self.expr(0)
            self.state = 169
            self.match(LoseParser.T__6)
            self.state = 170
            self.nondefcommand()
            self.state = 171
            self.match(LoseParser.T__12)
            self.state = 172
            self.match(LoseParser.T__2)
            self.state = 173
            self.nondefprog()
            self.state = 174
            self.match(LoseParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfstateContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.IfstateContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ifexpr(self):
            return self.getTypedRuleContext(LoseParser.IfexprContext,0)


        def ifnondefprog(self):
            return self.getTypedRuleContext(LoseParser.IfnondefprogContext,0)


        def getRuleIndex(self):
            return LoseParser.RULE_ifstate

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterIfstate(self)

        def exitRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.exitIfstate(self)




    def ifstate(self):

        localctx = LoseParser.IfstateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_ifstate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(LoseParser.T__15)
            self.state = 177
            self.match(LoseParser.T__10)
            self.state = 178
            self.ifexpr()
            self.state = 179
            self.match(LoseParser.T__12)
            self.state = 180
            self.match(LoseParser.T__2)
            self.state = 181
            self.ifnondefprog()
            self.state = 182
            self.match(LoseParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintstateContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LoseParser.PrintstateContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LoseParser.VAR, 0)

        def getRuleIndex(self):
            return LoseParser.RULE_printstate

        def enterRule(self, listener):
            if isinstance( listener, LoseListener ):
                listener.enterPrintstate(self)
